realigning profile/settings as well as login/signup fix

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,19 @@ background-color: #292833;
   outline: none;
 }
 
+.img:hover{
+  color: #424242; 
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -ms-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+  opacity: 1;
+  transform: scale(1.15);
+  -ms-transform: scale(1.15); /* IE 9 */
+  -webkit-transform: scale(1.15); /* Safari and Chrome */
+}
+
 #searchBar {
   color: #BF9AFC
 }
